--- a/src/app/crud/crud.component.html
+++ b/src/app/crud/crud.component.html
@@ -13,3 +13,12 @@
     </div>
   </section>
 </mat-dialog-content>
+<mat-dialog-actions align="center">
+  <div class="row btn-container">
+    <div class="col btn-adicionar">
+      <button id="boton" mat-button mat-dialog-close class="btn btn-danger">
+        Cerrar
+      </button>
+    </div>
+  </div>
+</mat-dialog-actions>
