--- a/src/app/crud/crud.component.html
+++ b/src/app/crud/crud.component.html
@@ -1,13 +1,13 @@
-<mat-dialog-content class="mat-typography">
+<mat-dialog-content class="mat-typography contan">
   <section class="container">
     <div class="main">
         <h1 class="mb-3 subtitle">CRUD PERSONA</h1>
         <div class="botones" >
           <div class="center">
-            <a id="boton" mat-button class="btn btn-success subtitle" (click)="obtenerPersona()">Obtener Persona</a>
+            <a id="boton" mat-button class="btn subtitle custom" (click)="obtenerPersona()">Obtener Persona</a>
           </div>
           <div class="center">
-            <a id="boton" mat-button class="btn btn-success subtitle" (click)="agregarPersona()">Agregar persona</a>
+            <a id="boton" mat-button class="btn subtitle custom" (click)="agregarPersona()">Agregar persona</a>
           </div>
         </div>
     </div>
