--- a/src/app/front-get/front-get.component.html
+++ b/src/app/front-get/front-get.component.html
@@ -1,6 +1,8 @@
+
 <mat-dialog-content class="mat-typography">
   <section class="container">
     <div class="main">
+      <h1 class="mb-3 subtitle">LISTA DE PERSONAS</h1>
       <table class="table">
         <thead class="table-dark">
           <tr>
