--- a/src/app/front-post/front-post.component.html
+++ b/src/app/front-post/front-post.component.html
@@ -1,10 +1,8 @@
-<div class="text-center">
-  <h2>Actualizar Persona</h2>
-</div>
 
 <mat-dialog-content class="mat-typography">
   <section>
     <div class="main">
+      <h1 class="mb-3 subtitle">AGREGAR PERSONAS</h1>
       <form [formGroup]="agregarPersona" class="main-form">
         <div class="row mb-4">
           <div class="col">
