--- a/src/app/frot-put/frot-put.component.html
+++ b/src/app/frot-put/frot-put.component.html
@@ -1,10 +1,7 @@
-<div class="text-center">
-  <h2 mat-dialog-title>Actualizar Persona</h2>
-</div>
-
 <mat-dialog-content class="mat-typography">
   <section>
     <div class="main">
+      <h1 class="mb-3 subtitle">ACTUALIZAR PERSONA</h1>
       <form [formGroup]="modificarPersona" class="main-form">
         <div class="row mb-4">
           <div class="col">
