--- a/src/app/front-get/front-get.component.scss
+++ b/src/app/front-get/front-get.component.scss
@@ -12,3 +12,9 @@
   border: 1px solid black; /* Grosor del borde y color */
 }
 
+.subtitle {
+  justify-self: center;
+  align-self: center;
+  text-align: center;
+}
+
