--- a/src/app/frot-put/frot-put.component.scss
+++ b/src/app/frot-put/frot-put.component.scss
@@ -2,3 +2,15 @@
   /* Agrega un borde negro a los botones */
   border: 1px solid black; /* Grosor del borde y color */
 }
+
+.subtitle {
+  justify-self: center;
+  align-self: center;
+  text-align: center;
+}
+
+.editarAlerta{
+  font-size: 12px;
+  padding: 5px;
+  border-radius: 5px;
+}
