--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,5 +2,14 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: #fbfacd9c;
+
+}
